// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Privacy should call addCommunityPrivacy from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "privacy": "privacy",
  },
  "type": "CREATE_COMMUNITY_ADD_COMMUNITY_PRIVACY",
}
`;

exports[`Privacy should call goHome from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Privacy should call goToNextStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-community/review",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Privacy should call goToPreviousStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-community/domain",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
